[package]
name = "rcs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
config = "0.13.3"
clap = { version = "4.4.1", features = ["derive", "env"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0.107"
mio = "0.8.8"
bincode = "1.3.3"
tokio = { version = "1.32.0", features = ["net", "rt", "sync", "io-std", "io-util", "macros", "tokio-macros", "time"]}
java-properties = "2.0.0"
lapin = "1.7.0"
futures-util = "0.3.17"
futures = "0.3"
ascii = "1.1"       # principally for u8 message types
rust_decimal = "1.32.0"
thiserror = "1.0.48"
rustc-hash = { version = "1.1" }
fixedstr = {version = "0.4.4", features = ["circular-str", "serde"]}
uuid = { version = "1.4.1", features = ["v4"]}
prost = "0.11.0"
prost-types = "0.11.0"

[build-dependencies]
prost-build = "0.11.0"
tonic-build = "0.9.0"
